--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -164,7 +164,7 @@ Thanks for writing.  It was good to hear from you!
 					One of the most best experiences I've ever had. I learned how to be both right and effective at the same time
 				<br></br>
 				<p>Thank you all the knowledgeable instructors and amazing participants!</p>
-				<em class="letters">Classes I took:
+				<em class="letters">Classes I've taken:
 				<br>
 				Transitioning From a Technical to a Management Position. Led by Chris Christensen, MS, MBA, of Christensen Associates, Inc
 				<br>
