--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <div class="menu">
-	<%= link_to image_tag("close.png", height: "30"), about_path, :id => "close"%>
+	<%= link_to image_tag("close.png", height: "30"), "#", :id => "close"%>
 
 	<div class="menu-icons">
 		<a href="#" class="fa-object-group" id="utilities"><span>Utilities</span></a>
