--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1600,101 +1600,219 @@ ul.mobile-social a {
     to {-moz-transform: translate(0, -0px);}    
 }
 
-/* About page toggle search */
-.list-switcher {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 0.95rem;
-  width: 100%;
-  max-width: 550px;
+/* About Page */
+#ipad	{
   position: absolute;
+  width: 750px;
+  height: 504px;
+  border-style: solid;
+  border-width: 30px 40px 30px 60px;
+  border-color: #fcf9f9;
+  border-radius: 20px;
+  display: block;
+  background: image-url("mountain1.jpg");
+  background-size: 650px 330px;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 0 2px #a0a0a0, -107px 88px 0 0 #63b1cf;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+   box-shadow:         2px 2px 5px 0px rgba(50, 50, 50, 0.75);
+   top: 55%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   z-index: -1;
+}
+
+#ipad span {
+  position: absolute;
+  background: #999;
+  padding: 8px 0 0;
+  width: 8px;
+  border-radius:4px;
+  right: 0;
+  margin-right: -22px;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
-label {
+#ipad span:before,
+#ipad span:after{
+  content:'';
   display: block;
-  margin-bottom: 1em;
-  letter-spacing: 1px;
+  position: absolute; 
 }
 
-.chunk {
-  display: block;
-  width: 100%;
-  margin-bottom: 2.5em;
-  
-  &:after {
-      content: "";
-      display: table;
-      clear: both;
-  }
+#ipad span:before{
+  border-radius:100%;
+  top: -10px;
+  left: -713px;
+  width: 40px;
+  height: 40px;
+  background: #fcf9f9;
+  border: 2px solid #807a7a;
 }
 
-// ===== Toggle Buttons =====
-// Button wrapper
-.toggle-button {
-  text-transform: capitalize;
+.mobile-window {
+	position: absolute;
+	height: 444px;
+	width: 650px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	top:55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin-left: 10px;
+	z-index: 1;
+	//box-shadow: 0 0 0 1px #a0a0a0;
 
-  .toggle-button_option:first-child {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
+}
+#ipad-cells {
+	width: 650px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 
-  .toggle-button_option:last-child {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
+	.mobile-cell-container {
+		height: 80px;
+		width: 100%;
+		
+		h4 {
+			margin-left: 60px;
+			margin-top: -70px;
+			color: #000;
+		}
+		
+		p {
+			color: #7f7a7a;
+			font-family: 'Lato', sans-serif;
+			font-size: 13px;
+			font-weight: 400;
+			text-transform: none;
+		}
+		.sub-name {
+			font-size: 17px;
+			margin-top: -58px;
+		}
+	}
+	
+	a {
+		cursor: pointer;
+	}
 }
 
-// Individual option in toggle button
-.toggle-button_option {
-  font-family: 'Lato', sans-serif;
-  display: inline-block;
-  float: left;
-  height: auto;
-  width: 13em;
-  padding: 0.875em;
-  font: inherit;
-  font-weight: 700;
-  color:#7f7f7f;  
-  background: #ececec;
-  text-decoration: none;
-  text-align: center;
-  margin: 0;
-  cursor: pointer;
-  overflow: visible;
-  border:1px solid #a7a7a7;  vertical-align: middle;
-  box-shadow: 0px 2px 1px white inset, 0px -2px 5px white, 0px 2px 3px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-  -webkit-appearance: none;
+#ipad-cells {
+	li {
+		height: 80px;
+	}
+	li:nth-child(1) {
+		height: 200px;
+		background: transparent;
+	}
 
-  span {
-    font-size: 15px;
-  }
+	li:nth-child(2) {
+	width: 100%;
+	height: 0;
+	border-top: 100px solid transparent;
+	border-left: 650px solid #fff;
+	background: transparent;
+	}
 
-  &.js-checked {
-  background: #ffffff;
-  color: #7f7f7f;
-  }
+	li:nth-child(3) {
+		background: #fff;
+	}	
 
-  // Hide the radio button
-  input {
-    position: absolute;
-    opacity: 0;
-    z-index: -1; /* Put the input behind the label so it doesn't overlay text */
-  }
+	li:nth-child(4) {
+		background: #fff;
+	}
+
+	li:nth-child(5) {
+		background: #fff;
+	}
+	
+	li:nth-child(6) {
+		background: #fff;
+	}
+	
+	li:nth-child(7) {
+		height: 0;
+		
+		.mobile-cell-container {
+			height: 0;
+		}
+	}
+	
+	#burger {
+		margin-top: 10px;
+		margin-left: 10px;
+	}
+	
+	#ipad-menu {
+		font-size: 17px;
+		margin-top: 20px;
+		margin-left: 60px;
+		text-transform: none;
+		font-weight: 300;
+	}
+	
+	#kfan-profile > img {
+		border-radius: 80px;
+		height: 80px;
+		width: 80px;
+		margin-left: -20px;
+	}
+	
+	#name {
+		position: absolute;
+		margin-top: 50px;
+		margin-left: 130px;
+		font-size: 400 !important;
+	}
+	
+	#name-des {
+		position: absolute;
+		margin-top: 90px;
+		margin-left: 130px;
+	}	
+	
+	.work-des {
+		position: absolute;
+		margin-top: -32px;
+		margin-left: 60px;
+	}
+	
+	span.mobile-dots {
+		position: absolute;
+		background: #d65b86;
+		padding: 8px 0 0;
+		width: 8px;
+		border-radius:4px;
+		right: 0;
+		margin-right: -22px;
+		top: 50%;
+		z-index: 999;
+		margin-right: 610px;
+		margin-top: -92px;
+  	}
+ 	 span.mobile-dots:before,
+ 	 span.mobile-dots:after {
+	    content:'';
+		display: block;
+		position: relative; 
+	}
 }
 
-.toggle-button_option:hover{
-		box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+#ios-cell {
+	span {
+		margin-top: -65px !important;
+	}
+	
+	h4 {
+		margin-top: -70px !important;
+	}
+	
+	p {
+		margin-top: -45px !important;
+	}
 }
 
-// Selection 
-.selectize-control.single .selectize-input, .selectize-control.single .selectize-input input {
-	cursor: pointer;
-}
 
 /* Work Slider */
 ::selection {
@@ -1941,27 +2059,6 @@ label {
 
 .toggle-show {
 	display:block;
-}
-
-// Progress Bar 
-.progress {
-  width: 24em;
-  height: 5px;
-}
-
-.progress-wrap {
-  overflow: hidden;
-  background: linear-gradient(to right, #4cd964, #5ac8fa, #007aff, #34aadc, #5856d6, #ff2d55);
-  position: absolute;
-  margin-top: 25px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.progress-wrap .progress-bar {
-  position: absolute;
-  background: #e5e9eb;
-  left: 0;
-  top: 0;
 }
 
 /* Web Development Page */
