--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<%= favicon_link_tag 'favicon.ico' %>	
 	<%= stylesheet_link_tag "hover-min", media: "all", "data-turbolinks-track" => true %>  	  	
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
