--- a/app/views/kfaninc/about.html.erb
+++ b/app/views/kfaninc/about.html.erb
@@ -7,7 +7,7 @@
 	<%= stylesheet_link_tag "hover-min", media: "all", "data-turbolinks-track" => true %>  	  	
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %> 
-	<% @title = "KFan > About" %></head>
+	<% @title = "KFan > Work" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
