--- a/app/views/kfaninc/web.html.erb
+++ b/app/views/kfaninc/web.html.erb
@@ -8,7 +8,7 @@
 	<%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track" => true %>  
 	<%= stylesheet_link_tag "hover-min", media: "all", "data-turbolinks-track" => true %>  	
   	<%= javascript_include_tag "modernizr.js", "data-turbolinks-track" => true %>
-	<% @title = "KFan > About > Web" %></head>
+	<% @title = "KFan > Work > Web" %></head>
 </head>
 <body>
 <div id="overlay-contact"></div>
@@ -108,8 +108,11 @@
 			</a>
 		</li>
 		<li class="widget-container hvr-hang">
-			<a href="#">
-				<div>
+			<a href="http://codepen.io/kevinfan23/pen/WwdZZG" target="_blank">
+				<div id="widget-snow">
+					<p class="widget-title">Snowfall</p>
+					<%= image_tag "widgets/snow.png" %>
+					<p class="widget-des">I was born in north China, where snow can be found all the way from November to the February of next year. In my childhood, the first beauty I discovered was the falling of snow shone by street lights</p>
 				</div>
 			</a>
 		</li>
