--- a/app/views/kfaninc/home.html.erb
+++ b/app/views/kfaninc/home.html.erb
@@ -216,7 +216,7 @@ Thanks for writing.  It was good to hear from you!
 	if (visit!=null){
 		$('#insns-overlay-wrapper').hide();		
 		var expire=new Date();
-		expire=new Date(expire.getTime()+7);
+		expire=new Date(expire.getTime()+7776000000);
 		document.cookie="ZZZZZ=here; expires="+expire;
 	}
 </script>
